  (Dmitry)
- Fixed bug #45139 (ReflectionProperty returns incorrect declaring class).
  (Felipe)
- Fixed bug #45124 ($_FILES['upload']['size'] sometimes return zero and 
  sometimes the filesize). (Arnaud)
- Fixed bug #45028 (CRC32 output endianness is different between crc32() 
  and hash()). (Tony)
- Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format).
  (Ilia)
- Fixed bug #44925 (preg_grep() modifies input array). (Nuno)
- Fixed bug #44891 Memory leak using registerPHPFunctions and XSLT Variable 
  as function parameter. (Rob)
- Fixed bug #44830 (Very minor issue with backslash in heredoc). (Matt)
- Fixed bug #44811 (Improve error message when creating a new SoapClient that 
  contains invalid data). (Markus Fischer, David C)
- Fixed bug #44798 (Memory leak assigning value to attribute). (Ilia)
- Fixed bug #44716 (Progress notifications incorrect). (Hannes)
- Fixed bug #44712 (stream_context_set_params segfaults on invalid arguments).
  (Hannes)
- Fixed bug #44617 (wrong HTML entity output when substitute_character=entity).
  (Moriyoshi)
- Fixed bug #44425 (Extending PDO/MySQL class with a __call() function doesn't
  work). (Johannes)
- Fixed bug #44246 (closedir() accepts a file resource opened by fopen()).
  (Dmitry, Tony)
- Fixed bug #44127 (UNIX abstract namespace socket connect does not work).
  (Jani)
- Fixed bug #43993 (mb_substr_count() behaves differently to substr_count() with
  overlapping needles). (Moriyoshi)
- Fixed Bug #43958 (class name added into the error message). (Dmitry)
- Fixed bug #43941 (json_encode silently cuts non-UTF8 strings). (Stas)
- Fixed bug #43782 (feof() does not detect timeout on socket). (David Soria Parra)
- Fixed bug #43668 (Added odbc.default_cursortype to control the ODBC
  cursormodel). (Patrick)
- Fixed bug #43666 (Fixed code to use ODBC 3.52 datatypes for 64bit systems). 
  (Patrick)
- Fixed bug #43540 (rfc1867 handler newlength problem). (Arnaud)