@@ -99,6 +99,8 @@ PHP                                                                        NEWS
   and hash()). (Tony)
 - Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format).
   (Ilia)
+- Fixed bug #44991 (Compile Failure With freetds0.82). 
+  (jklowden at freetds dot org, matthias at dsx dot at)
 - Fixed bug #44925 (preg_grep() modifies input array). (Nuno)
 - Fixed bug #44891 Memory leak using registerPHPFunctions and XSLT Variable 
   as function parameter. (Rob)
